<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".DangKyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:layout_above="@+id/LnDangky"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size_10dp"
        android:layout_margin="@dimen/size_10dp"
        android:textStyle="bold"
        android:textSize="@dimen/size_30dp"
        />

    <LinearLayout
        android:id="@+id/LnDangky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/black"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/black"
            android:singleLine="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/matkhau"
            android:textColorHint="@color/black"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/black"
            android:maxLength="25"
            android:inputType="textPassword"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:textColor="@color/white" />

            <RadioButton
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:textColor="@color/white" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/black"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/cancuoccongdan"
            android:textColorHint="@color/black"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/citizen_identification"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/black"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:padding="@dimen/size_10dp"
                android:layout_margin="@dimen/size_10dp"
                android:background="@color/colorGreen"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size_10dp"
                android:layout_margin="@dimen/size_10dp"
                android:background="@color/colorGreen"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
